--- a/WaterCraft/assets/watercraft/lang/zh_CN.lang
+++ b/WaterCraft/assets/watercraft/lang/zh_CN.lang
@@ -1,8 +1,4 @@
-Traslations done by Noob
-
-language.name=简体中文
-language.region=中国
-language.code=zh_CN
+﻿Traslations done by Noob
 
 itemGroup.watercraft=WaterCraft(水工艺)
 
