Changed lang files to UTF-8 encoding

--- a/WaterCraft/assets/watercraft/lang/sv_SE.lang
+++ b/WaterCraft/assets/watercraft/lang/sv_SE.lang
@@ -1,5 +1,4 @@
-
-itemGroup.watercraft=WaterCraft
+﻿itemGroup.watercraft=WaterCraft
 
 tile.bouyBlockName.name=Boj
 tile.controlUnitDock.name=Styrenhet
