--- a/WaterCraft/assets/watercraft/lang/de_DE.lang
+++ b/WaterCraft/assets/watercraft/lang/de_DE.lang
@@ -1,5 +1,4 @@
-
-itemGroup.watercraft=WaterCraft
+﻿itemGroup.watercraft=WaterCraft
 
 tile.bouyBlockName.name=Boje
 tile.controlUnitDock.name=Needs Localization
