--- a/WaterCraft/assets/watercraft/lang/en_US.lang
+++ b/WaterCraft/assets/watercraft/lang/en_US.lang
@@ -1,5 +1,4 @@
-﻿
-itemGroup.watercraft=WaterCraft
+﻿itemGroup.watercraft=WaterCraft
 
 tile.bouyBlockName.name=Buoy
 tile.controlUnitDock.name=Control Unit
