Fixing all Buoy typos

--- a/WaterCraft/assets/watercraft/lang/de_DE.lang
+++ b/WaterCraft/assets/watercraft/lang/de_DE.lang
@@ -1,6 +1,6 @@
 ﻿itemGroup.watercraft=WaterCraft
 
-tile.bouyBlockName.name=Boje
+tile.buoyBlockName.name=Boje
 tile.controlUnitDock.name=Needs Localization
 
 item.wcboat.name=Wc Boot
