--- a/WaterCraft/assets/watercraft/lang/sv_SE.lang
+++ b/WaterCraft/assets/watercraft/lang/sv_SE.lang
@@ -1,6 +1,6 @@
 ﻿itemGroup.watercraft=WaterCraft
 
-tile.bouyBlockName.name=Boj
+tile.buoyBlockName.name=Boj
 tile.controlUnitDock.name=Styrenhet
 
 item.wcboat.name=Wc Båt
