--- a/WaterCraft/assets/watercraft/lang/en_US.lang
+++ b/WaterCraft/assets/watercraft/lang/en_US.lang
@@ -5,5 +5,6 @@ tile.controlUnitDock.name=Control Unit
 tile.freezerBlockName.name=Water Freezer
 tile.smelterBlockName.name=Ice Smelter
 tile.toolBoxBlockName.name=Tool Box
+tile.TapeItemName.name=Tape Measure
 
 item.wcboat.name=Wc Boat
