--- a/WaterCraft/assets/watercraft/lang/de_DE.lang
+++ b/WaterCraft/assets/watercraft/lang/de_DE.lang
@@ -1,4 +1,5 @@
-﻿itemGroup.watercraft=WaterCraft
+﻿
+itemGroup.watercraft=WaterCraft
 
 tile.buoyBlockName.name=Boje
 tile.controlUnitDock.name=Steuereinheit
