--- a/WaterCraft/assets/watercraft/lang/sv_SE.lang
+++ b/WaterCraft/assets/watercraft/lang/sv_SE.lang
@@ -1,4 +1,5 @@
-﻿itemGroup.watercraft=WaterCraft
+﻿
+itemGroup.watercraft=WaterCraft
 
 tile.buoyBlockName.name=Boj
 tile.controlUnitDock.name=Styrenhet
