--- a/WaterCraft/assets/watercraft/lang/zh_CN.lang
+++ b/WaterCraft/assets/watercraft/lang/zh_CN.lang
@@ -7,10 +7,10 @@ tile.controlUnitDock.name=控制系统
 tile.freezerBlockName.name=冻水机
 tile.smelterBlockName.name=熔冰机
 
-item.lavaBoat.name=Lava Boat NEEDS LOCALIZATION
-item.boatChest.name=Chest Boat NEEDS LOCALIZATION
-item.TelescopeName.name=Telescope NEEDS LOCALIZATION
-item.TapeItemName.name=Tape Measure NEEDS LOCALIZATION
+item.lavaBoat.name=岩浆船
+item.boatChest.name=箱子船
+item.TelescopeName.name=望远镜
+item.TapeItemName.name=卷尺
 item.wcboat.name=船
 
 strings.watercraft:tape_measure_start=Start Measurement: [%s, %s, %s] NEEDS LOCALIZATION
