--- a/WaterCraft/assets/watercraft/lang/en_US.lang
+++ b/WaterCraft/assets/watercraft/lang/en_US.lang
@@ -16,4 +16,4 @@ strings.watercraft:tape_measure_start=Start Measurement: [%s, %s, %s]
 strings.watercraft:tape_measure_end=End Measurement: [%s, %s, %s]
 strings.watercraft:tape_measure_distance=Distance: %s
 
-death.attack.inception=%s got stuck in Limbo while trying to put a Toolbox in a Toolbox
+death.attack.inception=%s got stuck in Limbo while trying to put a Toolbox in a Toolbox.
