--- a/WaterCraft/assets/watercraft/lang/it_IT.lang
+++ b/WaterCraft/assets/watercraft/lang/it_IT.lang
@@ -15,3 +15,5 @@ item.wcboat.name=Boat NEEDS LOCALIZATION
 strings.watercraft:tape_measure_start=Start Measurement: [%s, %s, %s] NEEDS LOCALIZATION
 strings.watercraft:tape_measure_end=End Measurement: [%s, %s, %s] NEEDS LOCALIZATION
 strings.watercraft:tape_measure_distance=Distance: %s NEEDS LOCALIZATION
+
+death.attack.inception=%s got stuck in Limbo while trying to put a Toolbox in a Toolbox. NEEDS LOCALIZATION
