Fixed creative tab localization

--- a/WaterCraft/assets/watercraft/lang/en_US.lang
+++ b/WaterCraft/assets/watercraft/lang/en_US.lang
@@ -1,5 +1,5 @@
 ﻿
-itemGroup.watercraft=WaterCraft
+itemGroup.WaterCraft=WaterCraft
 
 tile.buoyBlockName.name=Buoy
 tile.controlUnitDock.name=Control Unit
