Just some clean up really, fixed the liquid tank not having an unlocalized name, also added localization for the chest and the tank. Also change the modular boat item to display the name of the modules attached.

--- a/WaterCraft/assets/watercraft/lang/en_US.lang
+++ b/WaterCraft/assets/watercraft/lang/en_US.lang
@@ -8,10 +8,13 @@ tile.buoyBlockName.name=Buoy
 tile.controlUnitDock.name=Control Unit
 tile.freezerBlockName.name=Water Freezer
 tile.toolBoxBlockName.name=Tool Box
+tile.wcLiquidTank.name=Liquid Tank
+tile.wcChestName.name=Chest
 
-item.hull0.name=Wooden Hull
-item.hull1.name=Lava Hull
+item.hull0.name=Buoy AI
+item.hull1.name=Vanilla AI
 item.hull2.name=Ice Hull
+item.hull3.name=Lava Hull
 item.TelescopeName.name=Telescope
 item.TapeItemName.name=Tape Measure
 item.wcboat.name=Boat
