Did a bit more work on the crane and changed a whole bunch of stuff, mainly modified the module system to require you to have an array of conlicing modules, this array will be looped through and compared against the existing modules when creating a boat, if they conflict the creation will fail

--- a/WaterCraft/assets/watercraft/lang/en_US.lang
+++ b/WaterCraft/assets/watercraft/lang/en_US.lang
@@ -13,8 +13,8 @@ tile.wcChestName.name=Chest
 
 item.hull0.name=Buoy AI
 item.hull1.name=Vanilla AI
-item.hull2.name=Ice Hull
-item.hull3.name=Lava Hull
+item.hull2.name=Hull Reinforcement : Ice
+item.hull3.name=Hull Reinforcement : Lava
 item.TelescopeName.name=Telescope
 item.TapeItemName.name=Tape Measure
 item.wcboat.name=Boat
