--- a/WaterCraft/assets/watercraft/lang/en_US.lang
+++ b/WaterCraft/assets/watercraft/lang/en_US.lang
@@ -11,6 +11,7 @@ tile.toolBoxBlockName.name=Tool Box
 tile.wcLiquidTank.name=Liquid Tank
 tile.wcChestName.name=Chest
 tile.lockAssemblerName.name=Lock Assembler
+tile.boatAssemblerName.name=Boat Assembler
 
 item.hull0.name=Buoy AI
 item.hull1.name=Vanilla AI
