--- a/WaterCraft/assets/watercraft/lang/en_US.lang
+++ b/WaterCraft/assets/watercraft/lang/en_US.lang
@@ -51,6 +51,6 @@ strings.watercraft:toolbox_contains=This Toolbox currently contains:
 strings.watercraft:toolbox_contains_nothing=Nothing
 strings.watercraft:toolbox_empty=An empty Toolbox
 strings.watercraft:toolbox_owner=This Toolbox belongs to: %s
-strings.watercraft:toolbox_no_owner=A unowned Toolbox
+strings.watercraft:toolbox_no_owner=An unowned Toolbox
 
 death.attack.inception=%s got stuck in Limbo while trying to put a Toolbox in a Toolbox.
