Updated English and German lang files to accommodate unlocalizedName fixes

--- a/WaterCraft/assets/watercraft/lang/de_DE.lang
+++ b/WaterCraft/assets/watercraft/lang/de_DE.lang
@@ -4,43 +4,43 @@ itemGroup.wcmisc=WaterCraft Zeug
 itemGroup.wcboats=WaterCraft Boote
 itemGroup.wcbouys=WaterCraft Bojen
 
-tile.buoyBlockName.name=Boje
-tile.controlUnitDock.name=Steuereinheit
-tile.freezerBlockName.name=Wasserkühler
-tile.toolBoxBlockName.name=Werkzeugkasten
-tile.wcLiquidTank.name=Flüssigkeitstank
-tile.wcChestName.name=Truhe
-tile.lockAssemblerName.name=Schloss Montage WIP
-tile.boatAssemblerName.name=Boot Montageband WIP
+tile.watercraft:buoyBlockName.name=Boje
+tile.watercraft:controlUnitDock.name=Steuereinheit
+tile.watercraft:freezerBlockName.name=Wasserkühler
+tile.watercraft:toolBoxBlockName.name=Werkzeugkasten
+tile.watercraft:wcLiquidTank.name=Flüssigkeitstank
+tile.watercraft:wcChestName.name=Truhe
+tile.watercraft:lockAssemblerName.name=Schloss Montage WIP
+tile.watercraft:boatAssemblerName.name=Boot Montageband WIP
 
-item.hull0.name=Modul: Folge Bojen
-item.hull1.name=Modul: Sitz
-item.hull2.name=Rumpf Upgrade: Eisbrecher
-item.hull3.name=Rumpf Upgrade: Lavaresistenz
-item.TelescopeName.name=Teleskop
-item.TapeItemName.name=Maßband
-item.wcboat.name=Boot
-item.rope.name=Seil
-item.padlock.name=Vorhängeschloss
-item.key.name=Schlüssel
-item.calculator.name=Rechner WIP
-item.wcboatmodular.name=Standard-Boot
+item.watercraft:boatModules0.name=Modul: Folge Bojen
+item.watercraft:boatModules1.name=Modul: Sitz
+item.watercraft:boatModules2.name=Rumpf Upgrade: Eisbrecher
+item.watercraft:boatModules3.name=Rumpf Upgrade: Lavaresistenz
+item.watercraft:TelescopeName.name=Teleskop
+item.watercraft:TapeItemName.name=Maßband
+item.watercraft:wcboat.name=Boot
+item.watercraft:rope.name=Seil
+item.watercraft:padlock.name=Vorhängeschloss
+item.watercraft:key.name=Schlüssel
+item.watercraft:calculator.name=Rechner WIP
+item.watercraft:wcboatmodular.name=Standard-Boot
 
-flag.white=Weiße Flagge
-flag.orange=Orange Flagge
-flag.magenta=Magenta Flagge
-flag.light_blue=Hellblaue Flagge
-flag.yellow=Gelbe Flagge
-flag.pink=Rosa Flagge
-flag.grey=Graue Flagge
-flag.light_grey=Hellgraue Flagge
-flag.cyan=Türkise Flagge
-flag.purple=Violette Flagge
-flag.blue=Blaue Flagge
-flag.brown=Braune Flagge
-flag.green=Grüne Flagge
-flag.red=Rote Flagge
-flag.black=Schwarze Flagge
+item.watercraft:flag.white=Weiße Flagge
+item.watercraft:flag.orange=Orange Flagge
+item.watercraft:flag.magenta=Magenta Flagge
+item.watercraft:flag.light_blue=Hellblaue Flagge
+item.watercraft:flag.yellow=Gelbe Flagge
+item.watercraft:flag.pink=Rosa Flagge
+item.watercraft:flag.grey=Graue Flagge
+item.watercraft:flag.light_grey=Hellgraue Flagge
+item.watercraft:flag.cyan=Türkise Flagge
+item.watercraft:flag.purple=Violette Flagge
+item.watercraft:flag.blue=Blaue Flagge
+item.watercraft:flag.brown=Braune Flagge
+item.watercraft:flag.green=Grüne Flagge
+item.watercraft:flag.red=Rote Flagge
+item.watercraft:flag.black=Schwarze Flagge
 
 strings.watercraft:tape_measure_start=Starte Messung: [%s, %s, %s]
 strings.watercraft:tape_measure_end=Beende Messung: [%s, %s, %s]
