--- a/WaterCraft/assets/watercraft/lang/en_US.lang
+++ b/WaterCraft/assets/watercraft/lang/en_US.lang
@@ -4,43 +4,43 @@ itemGroup.wcmisc=WaterCraft Miscellaneous
 itemGroup.wcboats=WaterCraft Boats
 itemGroup.wcbouys=WaterCraft Bouys
 
-tile.buoyBlockName.name=Buoy
-tile.controlUnitDock.name=Control Unit
-tile.freezerBlockName.name=Water Freezer
-tile.toolBoxBlockName.name=Tool Box
-tile.wcLiquidTank.name=Liquid Tank
-tile.wcChestName.name=Chest
-tile.lockAssemblerName.name=Lock Assembler
-tile.boatAssemblerName.name=Boat Assembler
+tile.watercraft:buoyBlockName.name=Buoy
+tile.watercraft:controlUnitDock.name=Control Unit
+tile.watercraft:freezerBlockName.name=Water Freezer
+tile.watercraft:toolBoxBlockName.name=Tool Box
+tile.watercraft:wcLiquidTank.name=Liquid Tank
+tile.watercraft:wcChestName.name=Chest
+tile.watercraft:lockAssemblerName.name=Lock Assembler
+tile.watercraft:boatAssemblerName.name=Boat Assembler
 
-item.hull0.name=Module: Follow Buoys
-item.hull1.name=Module: Seat
-item.hull2.name=Hull Upgrade: Ice Breaking
-item.hull3.name=Hull Upgrade: Lava Resistance
-item.TelescopeName.name=Telescope
-item.TapeItemName.name=Tape Measure
-item.wcboat.name=Boat
-item.rope.name=Rope
-item.padlock.name=Padlock
-item.key.name=Padlock Key
-item.calculator.name=Calculator
-item.wcboatmodular.name=Modular Boat
+item.watercraft:boatModules0.name=Module: Follow Buoys
+item.watercraft:boatModules1.name=Module: Seat
+item.watercraft:boatModules2.name=Hull Upgrade: Ice Breaking
+item.watercraft:boatModules3.name=Hull Upgrade: Lava Resistance
+item.watercraft:TelescopeName.name=Telescope
+item.watercraft:TapeItemName.name=Tape Measure
+item.watercraft:wcboat.name=Boat
+item.watercraft:rope.name=Rope
+item.watercraft:padlock.name=Padlock
+item.watercraft:key.name=Padlock Key
+item.watercraft:calculator.name=Calculator
+item.watercraft:wcboatmodular.name=Modular Boat
 
-flag.white=White Flag
-flag.orange=Orange Flag
-flag.magenta=Magenta Flag
-flag.light_blue=Light Blue Flag
-flag.yellow=Yellow Flag
-flag.pink=Pink Flag
-flag.grey=Grey Flag
-flag.light_grey=Light Grey Flag
-flag.cyan=Cyan Flag
-flag.purple=Purple Flag
-flag.blue=Blue Flag
-flag.brown=Brown Flag
-flag.green=Green Flag
-flag.red=Red Flag
-flag.black=Black Flag
+item.watercraft:flag.white=White Flag
+item.watercraft:flag.orange=Orange Flag
+item.watercraft:flag.magenta=Magenta Flag
+item.watercraft:flag.light_blue=Light Blue Flag
+item.watercraft:flag.yellow=Yellow Flag
+item.watercraft:flag.pink=Pink Flag
+item.watercraft:flag.grey=Grey Flag
+item.watercraft:flag.light_grey=Light Grey Flag
+item.watercraft:flag.cyan=Cyan Flag
+item.watercraft:flag.purple=Purple Flag
+item.watercraft:flag.blue=Blue Flag
+item.watercraft:flag.brown=Brown Flag
+item.watercraft:flag.green=Green Flag
+item.watercraft:flag.red=Red Flag
+item.watercraft:flag.black=Black Flag
 
 strings.watercraft:tape_measure_start=Start Measurement: [%s, %s, %s]
 strings.watercraft:tape_measure_end=End Measurement: [%s, %s, %s]
