Updated other localization files NEEDS CHECKING!

--- a/WaterCraft/assets/watercraft/lang/de_DE.lang
+++ b/WaterCraft/assets/watercraft/lang/de_DE.lang
@@ -1,4 +1,4 @@
-﻿Deutsche Übersetung von Robotic-Brain
+﻿Translations done by Robotic-Brain
 
 itemGroup.wcmisc=WaterCraft Zeug
 itemGroup.wcboats=WaterCraft Boote
