--- a/WaterCraft/assets/watercraft/lang/sv_SE.lang
+++ b/WaterCraft/assets/watercraft/lang/sv_SE.lang
@@ -4,38 +4,38 @@ itemGroup.wcmisc=WaterCraft Övrigt
 itemGroup.wcboats=WaterCraft Båtar
 itemGroup.wcbouys=WaterCraft Bojar
 
-tile.buoyBlockName.name=Boj
-tile.controlUnitDock.name=Styrenhet
-tile.freezerBlockName.name=Vatten Frysare
-tile.toolBoxBlockName.name=Verktygslåda
+tile.watercraft:buoyBlockName.name=Boj
+tile.watercraft:controlUnitDock.name=Styrenhet
+tile.watercraft:freezerBlockName.name=Vatten Frysare
+tile.watercraft:toolBoxBlockName.name=Verktygslåda
 
-item.lavaBoat.name=Lava Båt
-item.boatChest.name=Kist Båt
-item.TelescopeName.name=Teleskop
-item.TapeItemName.name=Måttband
-item.wcboat.name=Båt
-item.dumbBoat.name=Simpel Båt
-item.iceBoat.name=Isbrytare
-item.rope.name=Rep
-item.padlock.name=Hänglås
-item.calculator.name=Miniräknare
-item.wcboatmodular.name=Modulär Båt
+item.watercraft:lavaBoat.name=Lava Båt
+item.watercraft:boatChest.name=Kist Båt
+item.watercraft:TelescopeName.name=Teleskop
+item.watercraft:TapeItemName.name=Måttband
+item.watercraft:wcboat.name=Båt
+item.watercraft:dumbBoat.name=Simpel Båt
+item.watercraft:iceBoat.name=Isbrytare
+item.watercraft:rope.name=Rep
+item.watercraft:padlock.name=Hänglås
+item.watercraft:calculator.name=Miniräknare
+item.watercraft:wcboatmodular.name=Modulär Båt
 
-flag.white=Vit Flagga
-flag.orange=Orange Flagga
-flag.magenta=Magenta Flagga
-flag.light_blue=Ljust Blå Flagga
-flag.yellow=Gul Flagga
-flag.pink=Råsa Flagga
-flag.grey=Grå Flagga
-flag.light_grey=Ljus Grå Flagga
-flag.cyan=Turkos Flagga
-flag.purple=Lila Flagga
-flag.blue=Blå Flagga
-flag.brown=Brun Flagga
-flag.green=Grön Flagga
-flag.red=Rod Flagga
-flag.black=Svart Flagga
+item.watercraft:flag.white=Vit Flagga
+item.watercraft:flag.orange=Orange Flagga
+item.watercraft:flag.magenta=Magenta Flagga
+item.watercraft:flag.light_blue=Ljust Blå Flagga
+item.watercraft:flag.yellow=Gul Flagga
+item.watercraft:flag.pink=Råsa Flagga
+item.watercraft:flag.grey=Grå Flagga
+item.watercraft:flag.light_grey=Ljus Grå Flagga
+item.watercraft:flag.cyan=Turkos Flagga
+item.watercraft:flag.purple=Lila Flagga
+item.watercraft:flag.blue=Blå Flagga
+item.watercraft:flag.brown=Brun Flagga
+item.watercraft:flag.green=Grön Flagga
+item.watercraft:flag.red=Rod Flagga
+item.watercraft:flag.black=Svart Flagga
 
 strings.watercraft:tape_measure_start=Startad mätning vid: [%s, %s, %s]
 strings.watercraft:tape_measure_end=Avslutad mätning vid: [%s, %s, %s]
